# errand

./: .dockerignore  .env.example  .gitignore  Anchor.toml  Cargo.toml  Dockerfile  render.yaml
crates/errand-api/: Cargo.toml
crates/errand-api/src/: auth.rs  config.rs  db.rs  error.rs  executor.rs  main.rs  scheduler.rs  streaming.rs
crates/errand-api/src/agents/: crypto_research.rs  mod.rs  monitor.rs  research.rs  summarizer.rs
crates/errand-api/src/routes/: agents.rs  credits.rs  mod.rs  tasks.rs
crates/errand-types/: Cargo.toml
crates/errand-types/src/: lib.rs
migrations/: 001_initial_schema.sql
programs/errand/: Cargo.toml
programs/errand/src/: errors.rs  lib.rs  state.rs
programs/errand/src/instructions/: approve_result.rs  assign_agent.rs  cancel_job.rs  create_job.rs  deregister_agent.rs  initialize.rs  mod.rs  register_agent.rs  submit_result.rs
web/: package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  nav.tsx  page.tsx
web/src/app/agents/: page.tsx
web/src/app/dashboard/: page.tsx
web/src/app/login/: page.tsx
web/src/app/signup/: page.tsx
web/src/app/tasks/: page.tsx
web/src/app/tasks/[id]/: page.tsx
web/src/app/tasks/new/: page.tsx
web/src/components/: CategoryIcon.tsx  CreditDisplay.tsx  PipelineProgress.tsx  ProgressStream.tsx  RunHistory.tsx  StatusBadge.tsx  TaskTypeIcon.tsx
web/src/components/ui/: Button.tsx  Card.tsx  Input.tsx  Select.tsx  Textarea.tsx
web/src/lib/: api.ts  auth.tsx  types.ts
